2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/contacts/gm_contacts-gm_conf.cpp: Fix stupid error in
	gnomemeeting_local_addressbook_delete_contact.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* configure.in: The patch to disable gnome-doc-utils with
	--disable-gnome was half-bad.

2005-08-24  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Replaced unuseful code by a call to UpdateDevices 
	to avoid code duplication.

	* src/endpoint.[cpp|h]: Added basic H.323 video support!

	* src/gdkvideoio.[cpp|h]: Fixed colour format to RGB24. Code cleanup.

	* src/vfakeio.cpp: Same.

	* src/videograbber.cpp: Fixed leak.
	
2005-08-24  Julien Puydt  <jpuydt@free.fr>

	* configure.in: More work on getting pwlib&opal detection more gentle
	with alien systems.

2005-08-24  Julien Puydt  <jpuydt@free.fr>

	* configure.in: The previous patch was half-wrong: it didn't recall
	the previous result correctly.

2005-08-24  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made some opal tests use the previous results, and
	hence work even when opal isn't installed in a system directory.

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made the error message about ptlib-config not found
	actually work ;-)

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made some pwlib tests use the previous results, and
	hence work even when pwlib isn't installed in a system directory.

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Made the error message about unsupported OS actually
	work ;-)

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in, src/sound_handling.cpp, src/sound_handling.h: Made
	esound a gnome dependancy (ie: no esound if gnome is disabled).
	
2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Moved the --disable-gnome switch at the beginning
	and made GNOME_DOC_INIT depend on it.

2005-08-23  Julien Puydt  <jpuydt@free.fr>

	* help/omf.make: Use @PACKAGE_NAME@ instead of @PACKAGE@.
