@@ -1,5 +1,10 @@
 2005-08-25  Julien Puydt  <jpuydt@free.fr>
 
+	* lib/gm_conf-glib.c, lib/gnome_prefs_window.c: Changed use of strlen
+	to g_utf8_strlen.
+
+2005-08-25  Julien Puydt  <jpuydt@free.fr>
+
 	* lib/contacts/gm_contacts-gm_conf.cpp: Fix stupid error in
 	gnomemeeting_local_addressbook_delete_contact.
 
